--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,9 @@
   "type": "module",
   "version": "1.0.0",
   "description": "This is a fullstack app where users can upload and watch videos.",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
+    "start": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -28,7 +29,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
-    "cors": "^2.8.5",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.8.4",
